[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/HUD_Root.gd" type="Script" id=1]
[ext_resource path="res://HUD/dynamicfont_chintzy.tres" type="DynamicFont" id=2]

[node name="HUD_Root" type="Node"]
script = ExtResource( 1 )

[node name="Label_Score" type="Label" parent="."]
margin_left = 39.0
margin_top = 62.5487
margin_right = 812.0
margin_bottom = 148.549
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.65098, 0.0627451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "Score: 0"
percent_visible = -0.2

[node name="Label_Menu" type="Label" parent="."]
margin_left = 46.0
margin_top = 314.0
margin_right = 1054.0
margin_bottom = 1442.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.65098, 0.0627451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 14
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "Space Blaster 84

Shoot down as many enemy ships as possible

Press Enter to START
"
align = 1
valign = 1
autowrap = true

[node name="Label_Game_Over" type="Label" parent="."]
visible = false
margin_left = 51.0
margin_top = 418.0
margin_right = 1037.0
margin_bottom = 1565.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.65098, 0.0627451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 13
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "GAME OVER

Your Score: 59784

HIGH SCORE
2000782

Press Enter
to PLAY AGAIN


"
align = 1
valign = 1
